--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -33,7 +33,7 @@
             <!-- end sort -->
           </div>
         </div>
-        <div class="col-md-4" *ngFor="let product of products">
+        <div class="col-md-4" *ngFor="let product of receivedProducts">
           <div class="card mb-3 custom-card"
             *ngIf="searchTerm ==''|| product.title.trim().toLowerCase().includes(searchTerm.toLowerCase())">
             <div>
@@ -57,3 +57,6 @@
     </div>
   </div>
 </div>
+
+<!-- Pagination component -->
+<app-pagination (displayedProductsEvent)="updateDisplayedProducts($event)"></app-pagination>
