--- a/src/app/Component/Cart/cart/cart.component.html
+++ b/src/app/Component/Cart/cart/cart.component.html
@@ -37,7 +37,7 @@
             <img src="../../../assets/project images/cart.png" alt="">
             <h4>Your cart is empty!</h4>
             <p>Add items to it now</p>
-            <button routerLink="category" class="btn btn-outline-success">Shop Now</button>
+            <button routerLink="/products/category" class="btn btn-outline-success">Shop Now</button>
         </div>
     </div>
     </div>
