--- a/src/app/Component/home/home.component.css
+++ b/src/app/Component/home/home.component.css
@@ -12,6 +12,15 @@ body {
     text-decoration: none;
     color: black;
 }
+.category {
+    padding: 50px 0;
+  }
+  
+  .category h2 {
+    font-size: 2.5rem;
+    color: #333;
+  }
+  
 
 .footer {
     background-color: #212529;
