--- a/src/app/Component/product-details/product-details.component.css
+++ b/src/app/Component/product-details/product-details.component.css
@@ -123,11 +123,13 @@
 
 .quantity-controls {
   display: flex;
+
 }
 
 .quantity-controls button,
 .quantity-controls input {
-  margin-right: 5px;
+  margin-left: 100px;
+  border: 1px solid rgba(0, 128, 0, 0.586);;
 }
 .row {
 
