--- a/src/app/Component/Cart/cart/cart.component.html
+++ b/src/app/Component/Cart/cart/cart.component.html
@@ -4,19 +4,23 @@
             <h5 class="card-title">Shop Cart</h5>
             <p class="card-price">Total Price : EGP {{ getTotalPrice() }}</p>
             <button class="btn btn-danger clear"  (click)="Clear()">Clear Cart</button>
-        <div class="mt-4 card-item " *ngFor="let product of cartProducts; let i = index">
-            <div class=" card_img"><img [src]="product.image" alt=""></div>
+        <div class="mt-4 card-item " *ngFor="let item of cartProducts; let i = index">
+            <div class=" card_img"><img [src]="getImageUrl(item.product.image)" [alt]="item.product.title"></div>
+            
              <div class="card-text">
-                <h4>{{product.title}}</h4>
-                <p>{{product.price}}</p>
+                <h4>{{item.product.title}}</h4>
+                <p>{{item.product.price}}</p>
                 <button (click)="removeItem(i)" class="btn remove"><i class="bi bi-trash3"></i>Remove</button>
             </div>
           
-            <div class="quantity">
-                <button class="btn btn-outline-success"(click)="increaseQuantity(product)" >+</button>
-                <input class="form-control" type="number" min="1" [(ngModel)]="product.quantity">
-                <button class="btn btn-outline-success " (click)="decreaseQuantity(product)">-</button>
+            <div   class="quantity">
+                <button class="btn btn-outline-success" (click)="increaseQuantity(item)">+</button>
+                <span>{{ item.quantity }}</span>
+                <button class="btn btn-outline-success" (click)="decreaseQuantity(item)">-</button>
             </div>
+            
+            
+            
         
         </div>
         <hr>
