--- a/src/app/Component/categories/categories.component.css
+++ b/src/app/Component/categories/categories.component.css
@@ -36,8 +36,13 @@
 .custom-card {
   height: 100%;
   margin-top: 10px; 
+  position: relative;
 }
-
+.btn-details{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 .card-body {
   height: 100%;
 }
