--- a/src/app/Component/add-product/add-product.component.html
+++ b/src/app/Component/add-product/add-product.component.html
@@ -3,22 +3,24 @@
       <label for="title" class="form-label">Product title</label>
       <input type="text" class="form-control" id="title"  ngModel name="title" #title="ngModel" required>
       <div class="form-text" *ngIf="!title.valid  && title.touched">
-       not so  good!
+        please provide a valid title for the product
       </div>
     </div>
     <div class="col-md-4">
       <label for="quantity" class="form-label">quantity</label>
-      <input type="number" class="form-control" id="quantity" ngModel name="quantity" #quantity="ngModel" required>
+      <input type="number" min="1" max="5000" class="form-control" id="quantity" ngModel name="quantity" #quantity="ngModel" required>
       <div class="form-text" *ngIf="!quantity.valid  && quantity.touched">
-        not so  good!
+        please provide a valid quantity for the product
+
        </div>
     </div>
 
     <div class="col-md-4">
         <label for="price" class="form-label">price</label>
-        <input type="number" class="form-control" id="price" ngModel name="price" #price="ngModel"  required>
+        <input type="number" min="1" max="5000"  class="form-control" id="price" ngModel name="price" #price="ngModel"  required>
         <div class="form-text" *ngIf="!price.valid  && price.touched">
-          not so  good!
+          please provide a valid price for the product
+
          </div>
       </div>
 
@@ -26,15 +28,16 @@
         <label for="description" class="form-label">description</label>
         <input type="text" class="form-control" id="description" ngModel name="description" #description="ngModel"  required>
         <div class="form-text" *ngIf="!description.valid  && description.touched">
-          not so  good!
+          please provide a valid description for the product
+
          </div>
       </div>
 
       <div class="col-md-4">
         <label for="image" class="form-label">choose image</label>
         <input type="file" class="form-control" id="image"  name="image" (change)="onFileSelected($event)" ngModel #image="ngModel"  required>
-        <div class="form-text" *ngIf="!image.valid  && (image.touched || image.control)">
-          not so  good!
+        <div class="form-text" *ngIf="!image.valid  && (image.touched || image.dirty)">
+          please provide a valid image (.jpg , .jpeg , .png , .gif) 
          </div>
       </div>
 
@@ -42,21 +45,15 @@
         <label for="colors" class="form-label">colors</label>
         <input type="color" class="form-control form-control-color" id="colors" [(ngModel)]="color" name="colors" #colors="ngModel" required>
         <div class="form-text" *ngIf="!colors.valid  && colors.touched">
-          not so  good!
+          please provide a valid colors for the product
+
          </div>
       </div>
 
       <div class="col-md-4" *ngIf="allCategories">
         <label for="category" class="form-label">category</label>
-        <!-- <input type="text" class="form-control" id="category" ngModel name="category" #category="ngModel" required>
-        <div class="form-text" *ngIf="!category.valid  && category.touched">
-          not so  good!
-         </div> -->
           <select name="category" ngModel>
-            
             <option *ngFor="let cat of allCategories" value={{cat.id}}>{{cat.name}}</option>
-            <!-- <option value="accepted">Accepted</option>
-            <option value="rejected">Rejected</option> -->
           </select>
       </div>
 
@@ -64,19 +61,19 @@
         <label for="company" class="form-label">company</label>
         <input type="text" class="form-control" id="company" ngModel name="company" #company="ngModel"  required>
         <div class="form-text" *ngIf="!company.valid  && company.touched">
-          not so  good!
+          please provide a valid company for the product    
          </div>
       </div>
 
       <div class="col-md-4">
         <label for="sold" class="form-label">sold</label>
-        <input type="number" class="form-control" id="sold" ngModel name="sold" #sold="ngModel" required>
+        <input type="number" min="0" max="5000"  class="form-control" id="sold" ngModel name="sold" #sold="ngModel" required>
         <div class="form-text" *ngIf="!sold.valid  && sold.touched">
-          not so  good!
+          please provide a valid sold for the product
          </div>
       </div>
     
     <div class="col-12">
-      <button class="btn btn-primary" type="submit">Submit form</button>
+      <button class="btn btn-primary" type="submit" [disabled]="!addForm.valid">Submit form</button>
     </div>
   </form>
