--- a/src/app/Component/Cart/cart/cart.component.html
+++ b/src/app/Component/Cart/cart/cart.component.html
@@ -25,7 +25,7 @@
         </div>
         <hr>
  
-         <button class="btn btn-primary buy">Buy Now</button>
+         <button class="btn btn-primary buy" (click)="orderNow()">Buy Now</button>
         
         
       
@@ -33,6 +33,8 @@
     
     </div>
 </ng-container>
+
+<div class="alert alert-success" role="alert" *ngIf="success"><strong>well donel</strong> Your Order is Successfully Send</div>
 
 <ng-container *ngIf="cartProducts.length === 0">
     <div class="container d-flex justify-content-center align-items-center" style="height: 60vh;">
