--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -32,10 +32,10 @@
         
         <div class="col-md-4" *ngFor="let product of receivedProducts">
           <!-- {{ searchTerm | json }}
-          {{ product.title | json }} -->
-
+          {{ product.title.trim().toLowerCase().includes(searchTerm.toLowerCase()) | json }} -->
+          <!-- *ngIf="searchTerm ==''|| product.title.trim().toLowerCase().includes(searchTerm.toLowerCase())" -->
           <div class="card mb-3 custom-card"
-          *ngIf="searchTerm !=''|| product.title.trim().toLowerCase().includes(searchTerm.toLowerCase())"> 
+          *ngIf="productMatchesSearch(product)"> 
             
             <div>
               <img class="card-img-top product-image" [src]="getImageUrl(product.image)" [alt]="product.title">
