--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -30,8 +30,7 @@
           </div>
         </div>
         <div class="col-md-4" *ngFor="let product of receivedProducts">
-          <div class="card mb-3 custom-card"
-            *ngIf="searchTerm ==''|| product.title.trim().toLowerCase().includes(searchTerm.toLowerCase())">
+          <div class="card mb-3 custom-card" *ngIf="productMatchesSearch(product)">
             <div>
               <img class="card-img-top product-image" [src]="getImageUrl(product.image)" [alt]="product.title">
             </div>
