handle bugs in admin component

--- a/src/app/Component/admin-dashboard/admin-board/admin-board.component.html
+++ b/src/app/Component/admin-dashboard/admin-board/admin-board.component.html
@@ -68,7 +68,7 @@
       </div>
 
       <div class="user">
-        <img src="assets\home-img-1.png" alt="">
+        <img src="assets\project images\person1.png" alt="">
       </div>
     </mat-toolbar>
     <div class="cardBox">
