--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
          </div>
     </div>
 </div>
-<footer class="footer">
+<!-- <footer class="footer">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
@@ -48,10 +48,30 @@
     </div>
     <div class="row mt-5">
       <div class="col-md-12 text-center">
+        <p class="copyright"> Copyright &copy;All rights reserved</p>
+        <ul class="ftco-footer-social p-0">
+          <li class="ftco-animate"><a href="#" data-placement="top" title="Twitter"><i class="bi bi-twitter-x"></i></a>
+          </li>
+          <li class="ftco-animate"><a href="#" data-placement="top" title="Facebook"><i class="bi bi-facebook"></i></a>
+          </li>
+          <li class="ftco-animate"><a href="#" data-placement="top" title="Instagram"><i
+                class="bi bi-instagram"></i></a></li>
+        </ul>
 
-        <p class="copyright">
-          Copyright &copy;All rights reserved</p>
       </div>
+    </div>
+  </div>
+</footer> -->
+
+<footer class="footer">
+  <div class="row mt-5">
+    <div class="col-md-12 text-center">
+      <p class="copyright"> Copyright &copy;All rights reserved</p>
+      <ul class="ftco-footer-social p-0">
+        <li class="ftco-animate"><a href="#" data-placement="top" title="Twitter"><i class="bi bi-twitter-x"></i></a></li>
+        <li class="ftco-animate"><a href="#" data-placement="top" title="Facebook"><i class="bi bi-facebook"></i></a></li>
+        <li class="ftco-animate"><a href="#" data-placement="top" title="Instagram"><i class="bi bi-instagram"></i></a></li>
+      </ul>
     </div>
   </div>
 </footer>
