--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -29,8 +29,8 @@
             <!-- end sort -->
           </div>
         </div>
-        <div class="col-md-4" *ngFor="let product of receivedProducts">
-          <div class="card mb-3 custom-card" *ngIf="productMatchesSearch(product)">
+        <div class="col-md-4" *ngFor="let product of receivedProducts |paginate: {itemsPerPage:6,currentPage:p}">
+          <div class="card mb-3 custom-card">
             <div>
               <img class="card-img-top product-image" [src]="getImageUrl(product.image)" [alt]="product.title">
             </div>
@@ -65,5 +65,6 @@
 
     </div>
   </div>
-  <!-- Pagination component -->
-  <app-pagination (displayedProductsEvent)="updateDisplayedProducts($event)"></app-pagination>
+  <div class="mt-5 border-1 border-success p-2 text-center w-100">
+    <pagination-controls (pageChange)="p=$event"></pagination-controls>
+  </div>
