--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -21,7 +21,7 @@
             <!-- sort by price and category-->
             <select class="form-select w-25 ms-2 text-success" aria-label="Sort By" [(ngModel)]="sortBy"
               (change)="onSortChange(sortBy)">
-              <option disabled selected>Sort By</option>
+              <option selected value="">Sort By</option>
               <option value="price">Price (Low to High)</option>
               <option value="price-desc">Price (High to Low)</option>
               <option value="category">Category (A to Z)</option>
