--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -43,23 +43,28 @@
               <button class="btn btn-outline-success  btn-details" [routerLink]="['/products', product._id]">
                 <i class="bi bi-eye-fill"></i>
               </button>
-              <button class="btn btn-success mb-2  cart-btn" (mouseenter)="isHovered = true"
+              <button class="btn btn-success mb-2 cart-btn"
+              (mouseenter)="isHovered = true"
+              (mouseleave)="isHovered = false">
+        <button class="btn"
+                (click)="addToCart(product)"
+                (mouseenter)="isHovered = true"
                 (mouseleave)="isHovered = false">
-                <button class="btn " (click)="addToCart(product)"(mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
-                  <i style="font-size: 30px;" class="bi bi-cart-plus"></i>
-                  <span class="badge badge-primary" *ngIf="quantity > 0">{{ quantity }}</span>
-                </button>
-                
-                <div class="quantity-controls" [ngClass]="{ 'expanded': isHovered }">
-                  <button class="btn btn-sm btn-outline-success" (click)="decreaseQuantity(product)">
-                    <i class="bi bi-dash"></i>
-                  </button>
-                  <span>{{ quantity }}</span>
-                  <button class="btn btn-sm btn-outline-success" (click)="increaseQuantity(product)">
-                    <i class="bi bi-plus"></i>
-                  </button>
-                </div>
-              </button>
+          <i style="font-size: 30px;" class="bi bi-cart-plus"></i>
+          <!-- <span class="badge badge-primary" *ngIf=" hoveredProduct && hoveredProduct._id === product._id">{{ quantity }}</span> -->
+        </button>
+        
+        <div class="quantity-controls" [ngClass]="{ 'expanded': isHovered && hoveredProduct && hoveredProduct._id === product._id }">
+          <button class="btn btn-sm btn-outline-success" (click)="decreaseQuantity(product)">
+            <i class="bi bi-dash"></i>
+          </button>
+          <span>{{ quantity }}</span>
+          <button class="btn btn-sm btn-outline-success" (click)="increaseQuantity(product)">
+            <i class="bi bi-plus"></i>
+          </button>
+        </div>
+      </button>
+      
             </div>
 
           </div>
