--- a/src/app/Component/admin-dashboard/Orders/content.component.html
+++ b/src/app/Component/admin-dashboard/Orders/content.component.html
@@ -46,14 +46,22 @@
       <h2>Recent Customers</h2>
     </div>
 
-    <div class="table-container">
+    <div *ngIf="isloading">
+      <app-loading-spinner></app-loading-spinner>
+      </div>
+    <div class="table-container" *ngIf="!isloading">
       <table>
         <tr *ngFor="let item of users">
           <td width="60px">
-            <div class="imgBx"><img src="{{ item.userImage }}" alt=""></div>
+            <div class="imgBx"><img [src]="getImgUrl(item.image)" alt=""></div>
           </td>
           <td>
-            <h4>{{ item.username }} <br> <span>{{ item.email }}</span></h4>
+            <h4>{{ item.fname  }} <br> <span>{{ item.email }}</span></h4>
+          </td>
+          <td (mouseenter)="showDele()" *ngIf="showDelet" style="">
+            <button class="btn btn-danger" (click)="deleteUser(item._id)">
+              <i class="bi bi-trash-fill" ></i> <!-- Bootstrap trash icon -->
+            </button>
           </td>
         </tr>
       </table>
