--- a/src/app/Component/login/login.component.css
+++ b/src/app/Component/login/login.component.css
@@ -65,7 +65,7 @@ form h1 {
 }
 
 
-.ng-invalid.ng-touched input[type="email"],
-.ng-invalid.ng-touched input[type="password"] {
+input[type="email"].ng-invalid.ng-touched ,
+input[type="password"] .ng-invalid.ng-touched {
     border: 1px solid red;
 }
