--- a/src/app/Component/signup/signup.component.css
+++ b/src/app/Component/signup/signup.component.css
@@ -66,7 +66,7 @@ form h1 {
 }
 
 
-.ng-invalid.ng-touched input[type="email"],
-.ng-invalid.ng-touched input[type="password"] {
+input[type="email"].ng-invalid.ng-touched ,
+input[type="password"].ng-invalid.ng-touched  {
   border: 1px solid red;
 }
