add dialog confirmation component

--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -39,6 +39,10 @@
               </li>
             </ul>
           </div>
+          <!-- todo add user image -->
+          <!-- <span>
+            <img [src]="getUserIamge()" class="navImage" alt="userImage">
+          </span> -->
         </li>
       </ul>
       <button routerLink="/cart" class="btn ">
