--- a/src/app/Component/signup/signup.component.html
+++ b/src/app/Component/signup/signup.component.html
@@ -55,7 +55,7 @@
 
         <button type="submit" class="btn btn-primary" [disabled]="!registerForm.valid">Submit</button>
       </form>
-    <a routerLink="/login">don't  have an account</a>
+    <a routerLink="/login">have an account ? </a>
 
     </div>
   </div>
